perf: Scala performance optimization Phase 1+2
- WS event batching (50ms/50 delta window) in AgentCore
- ZGC generational + StringDeduplication + AlwaysPreTouch in build.sbt
- deepMerge elimination via JsonObject.add (DelegateTool + protocol.scala)
- Persistence debounce (2s window) in SessionStore
- Serialization/IO separation + noSpaces compression in SessionStore